<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>stereo_decoder</name>
  <version>0.1.0</version>
  <description>Stereo H264 decoder library</description>

  <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/clydemcqueen/stereo_decoder.git</url>
  <url type="bugtracker">https://github.com/clydemcqueen/stereo_decoder/issues</url>

  <author>Clyde McQueen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <!-- This recursively depends on a set of common linters -->
  <test_depend>ament_lint_common</test_depend>

  <!-- Ament uses these linters, turn them on/off one by one to debug: -->
<!--  <test_depend>ament_cmake_copyright</test_depend>-->
<!--  <test_depend>ament_cmake_cppcheck</test_depend>-->
<!--  <test_depend>ament_cmake_cpplint</test_depend>-->
<!--  <test_depend>ament_cmake_flake8</test_depend>-->
<!--  <test_depend>ament_cmake_lint_cmake</test_depend>-->
<!--  <test_depend>ament_cmake_pep257</test_depend>-->
<!--  <test_depend>ament_cmake_uncrustify</test_depend>-->
<!--  <test_depend>ament_cmake_xmllint</test_depend>-->

  <depend>ffmpeg</depend>
  <depend>h264_msgs</depend>
  <depend>image_geometry</depend>
  <depend>libavdevice-dev</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>